ENGR (engrave runes): Protects against weather attacks as well as energy/spirit
FEAR (create fear): Hits 50% more than in Arc III
SSTO (summon storm): Hits 50% more than in Arc III
COUR (instill courage): Gives +2 bonus (up from +1) and +1 against ranged attacks. Hits 150% more than intended in Arc III, 400% more than actual (bugged) in Arc III
SWIN (summon wind): Energy cost halved

Items added:
Dolphins

Items removed:
Wagons
Rough Gems
7 Trade Items (GEM, GCHE, VODK, MINK, SPIC, COTT, IVOR)

Item changes:
PPAR requires ARMO 4 (from GCUT 5)
AGAL protection increased to 200
rgems count as advanced items
MSWO is armour-piercing
RUNE is armour-piercing, and has its combat bonus increased to 5.
DBOW is no longer armour-piercing
DBOW, XBOW get +2 attack bonus
XBOW attacks in battle round 2,4,6
CLOA reduces multi-hit point heros to one hit point in battle.
GRYF: 33 hits/attacks (down from 40), all skill levels up by 1.



Stored templates are listed at the end of the report, and may be used immediately after definition. For instance, a sample set of orders:

#atlantis 10 xxxx
template Scout
avoid 1
noaid 1
claim 100
buy 1 peasant

unit 99
study stea
form
type scout
move n
end
form
type scout
move ne
end
form
type scout
move nw
end
form
type scout
move s
end
#end

etc.


Updates which may be done before or during testgame:
[Hopefully, given time] Item sharing for SELL
[Hopefully, given time] Introduce the basics of a happiness/reputation model, but having only minor effects (on tax income and wages) for this game.
[Hopefully, given time] Recode FOLLOW order to be more stable and work for sailing along hexsides
[Hopefully, given time] Jan's fleet coding

List of Changes carried over from Arcadia III:

Units gain experience from using skills, and knowledge from studying skills. These are stored seperately, eg MINI 3 (90/60). Units get one skill level with 30 experience/knowledge, a second at 90, a third at 180 and a fourth at 300.