@@ -1,33 +1,0 @@
-Hi all,
-
-I'm sending this to let you know how I am currently thinking about the recently raised hero issue, and to give everyone a chance for feedback if they do not like the sound of this.
-
-
-Each hex has only one race available (eg wood elves). Leaders will not exist.
-
-'Normal' units will be able to study to level 2 in their specialist skills and level 1 in others. All units (except those with a particular hero skill) will have the same max experience skill as knowledge skill, so can get a total of level 4 in their specialist skill and level 2 in others. Orcs are the only exception, can only study combat, and can get this to level 6 like in Nylandor. Normal units will cost 10 silver maintenance.
-
-'Normal' units can be upgraded at a silver cost to 'leaders', which can study multiple skills, and one level higher than normal units (so max levels of 6/4, or 8/2 for orcs). Leaders can also teach, like currently. Leaders will cost 20 silver maintenance
-
-'Leaders' can be upgraded at a silver cost to 'heros', which have an additional four characteristics: magic, strength, charisma and piety. At first, all these are at level zero, and a hero is just an expensive leader, but able to study normal skills a further level - ie to 8/6. Heros may also be found (like Nylandor mages), in which case they will have one bonus point in one of the above four characteristics. I am yet to decide on the maintenance cost, but am thinking in the 100 to 1000 silver range.
-
-'Heros' can be given quests at temples (non-buildable object), and when they complete them they will gain a point in a characteristic of their choice. This then allows them to study skills downstream from that characteristic to knowledge/experience level equal to their level of that characteristic if their race specialises in that skill, or one level below if they do not. To give an example:
-
-Magic has five downstream paths: windkey, illusion, patterning, summoning, mysticism
-Strength has two: battletraining, agility
-Charisma has two: glamour, beasttraining
-Piety has two: luck, artifact lore
-
-Vikings currently specialise in: sailing, lumberjack, combat, construction, as well as hero skills windkey, illusion, battletraining, beast training.
-
-A viking hero with one point in energy could study/experience windkey or illusion spells to level 1, but could not study other spells. A viking with two points in strength could study/experience battletraining skills to level 2, or agility to level 1. A viking hero could not study luck or artifact lore until they had two points in piety (ie one point in piety would be worthless for a viking, but not for other races). A viking hero could also study 4 levels in lumberjack or combat, or 3 levels in stealth, observation, etc.
-
-The Nylandor higher energy costs for non-specialist mages would be dropped (the level penalty is plenty). I'm undecided about the experience penalty in non-specialist fields, but leaning towards dropping it also. Only the five magic paths have the energy limitations; non-magic heros may have some 'castable' skills but no energy requirement. Energy requirements would be kept roughly similar to Nylandor.
-
-Quartermasters, seen in some other games, would be a skill in the glamour tree.
-
-Normal specialities would be redone slightly to include stealth, observation and gemcutting (current plan: ice dwarves eliminated, mermen created, eskimos, desert dwarves and sea elves get observation, mermen and tribal elves get stealth, mermen and underdwarves get gemcutting). The tactics skill would be dropped.
-
-There would in theory be no limit to how many character points a hero could get, but in practise completing the first quest should be easy, the second harder, and getting third and fourth points quite difficult. One of the victory conditions would be getting high-level heros.
-
-Heros will be bound by the following rule: Heros may not assassinate other heros.
