@@ -58,9 +58,10 @@ typedef  struct randctx  randctx;
  If (flag==TRUE), then use the contents of randrsl[0..RANDSIZ-1] as the seed.
 ------------------------------------------------------------------------------
 */
-void randinit(randctx *r, word flag);
 
-void isaac(randctx *r);
+void randinit(randctx *ctx, word flag);
+void isaac(randctx *ctx);
+
 
 
 /*
